--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Responsive portofolio website",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursiven"
   },
   "author": "Heghes Bogdan",
   "license": "MIT",
